Cast modifier - Edit Cache problems #41580

Closed
opened 2014-08-25 18:24:28 +02:00 by Karja Krähwald · 5 comments

System Information
Windows 7 64, HD 5770

Blender Version
Broken: 9337574 (2.71 release) & 1987548

Short description of error
Instanced objects (mesh or curve for example) are going crazy (spin around)
if minimum 2 in the same instance have a Cast modifier, same target object, Use Transform and Edit Cache activated.

Exact steps for others to reproduce the error
CastUseTransformBug.blend

  • Add an Empty.
  • Add a Cube, give it a Cast modifier.
  • In Cast modifier:
    • Set control object to Empty.
    • Activate Use Transform option.
    • Activate Apply modifier to editing cache during edit mode in the header.
  • Make a linked duplicate (ALT+D) of Cube.
  • You can place all objects how you like.

You have now 2 linked Cubes, using the same target for Cast.

IMPORTANT: Move Empty -> Weird deformation on both cubes.

NOTE: This behaviour ends if one of the above mentioned requirements is missing.

**System Information** Windows 7 64, HD 5770 **Blender Version** Broken: 9337574 (2.71 release) & 1987548 **Short description of error** Instanced objects (mesh or curve for example) are going crazy (spin around) if minimum 2 in the same instance have a Cast modifier, same target object, Use Transform and Edit Cache activated. **Exact steps for others to reproduce the error** [CastUseTransformBug.blend](https://archive.blender.org/developer/F106688/CastUseTransformBug.blend) - Add an `Empty`. - Add a `Cube`, give it a `Cast modifier`. - In Cast modifier: - Set control object to `Empty`. - Activate `Use Transform` option. - Activate `Apply modifier to editing cache during edit mode` in the header. - Make a linked duplicate (ALT+D) of `Cube`. - You can place all objects how you like. You have now 2 linked Cubes, using the same target for Cast. IMPORTANT: Move Empty -> Weird deformation on both cubes. NOTE: This behaviour ends if one of the above mentioned requirements is missing.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja
Bastien Montagne self-assigned this 2014-08-25 20:56:26 +02:00

This issue was referenced by d822624adc

This issue was referenced by d822624adcaa04483cc7d694baa728a281de9b3d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d822624adc.

Closed by commit d822624adc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41580
No description provided.