Fix T41580: Cast modifier - Edit Cache problems.

Modifiers should never ever modify data from target objects!!! With multithreaded
evaluation, this is a nice bug factory!